LPS-45470  on smartphones, portlet configuration alert message text has overflow issues

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -32,6 +32,7 @@
 	}
 
 	.alert {
+		display: inline-block;
 		word-wrap: break-word;
 	}
 
